--- a/flask_app/templates/Index.html
+++ b/flask_app/templates/Index.html
@@ -3,85 +3,20 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Sasquatch Websighting</title>
+  <title>Recipe Book</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 </head>
 <body>
   <div class="container ">
     <div class="row mt-4">
-
-      <div class="col-6">
-        <div class="card">
-          <h3 class="card-header text-primary">Register</h3>
-          <div class="card-body">
-
-            <form action="/users/create" method="post" class="form-label">
-
-              <label for="first_name" class="form-label">First Name:</label>
-              <input type="text" name="first_name" class="form-control">
-              {% for message in get_flashed_messages(category_filter=['err_first_name']) %}
-              <p class="text-danger">
-                <small>
-                  {{message}}
-                </small>
-              </p>
-              {% endfor %}
-
-              <label for="last_name" class="form-label">Last Name:</label>
-              <input type="text" name="last_name" class="form-control">
-              {% for message in get_flashed_messages(category_filter=['err_last_name']) %}
-              <p class="text-danger">
-                <small>
-                  {{message}}
-                </small>
-              </p>
-              {% endfor %}
-
-              <label for="email" class="form-label">Email:</label>
-              <input type="text" name="email" class="form-control">
-              {% for message in get_flashed_messages(category_filter=['err_email']) %}
-              <p class="text-danger">
-                <small>
-                  {{message}}
-                </small>
-              </p>
-              {% endfor %}
-
-              <label for="password" class="form-label">Password:</label>
-              <input type="password" name="password" class="form-control">
-              {% for message in get_flashed_messages(category_filter=['err_password']) %}
-              <p class="text-danger">
-                <small>
-                  {{message}}
-                </small>
-              </p>
-              {% endfor %}
-
-              <label for="confirm_password" class="form-label">Confirm Password:</label>
-              <input type="password" name="confirm_password" class="form-control">
-              {% for message in get_flashed_messages(category_filter=['err_confirm_password']) %}
-              <p class="text-danger">
-                <small>
-                  {{message}}
-                </small>
-              </p>
-              {% endfor %}
-
-              <button type="submit" class="btn btn-primary mt-3">Register</button>
-
-            </form>
-
-
-          </div>
-        </div>
-      </div>
+      <div class="col-3"></div>
       <div class="col-6">
         <div class="card">
           <h3 class="card-header text-success">Login</h3>
           <div class="card-body">
 
-            <form action="/users/login" method="post" class="form-label">
+            <form action="/login" method="post" class="form-label">
 
               <label for="email" class="form-label">Email:</label>
               <input type="text" name="email" class="form-control">
@@ -95,14 +30,17 @@
                 </small>
               </p>
               {% endfor %}
-
-              <button type="submit" class="btn btn-success mt-3">Login</button>
+              <div class="d-flex align-items-baseline justify-content-between">
+                <button type="submit" class="btn btn-success mt-3">Login</button>
+                <a href="/sign_up">Sign Up</a>
+              </div>
 
             </form>
 
           </div>
         </div>
       </div>
+      <div class="col-3"></div>
     </div>
 
 
