--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -3,26 +3,43 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Recipes</title>
+  <title>Recipe Book</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
   <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
-  <nav class="navbar bg-body-tertiary">
+  <nav class="navbar bg-body-tertiary bg-dark-subtle">
     <div class="container-fluid">
-      <h2 class="navbar-brand">Welcome {{user.first_name}}</h2>
-
+      <h2>Hi, {{user.first_name}}</h2>
+      <h1>Recipe Book</h1>
       <div>
         <a class="btn btn-primary" href="/recipes/new">
           Create
         </a>
-        <a class="btn btn-danger" href="/logout">
+        <a class="btn btn-outline-danger" href="/logout">
           Logout
         </a>
       </div>
     </div>
   </nav>
+  <ul class="nav nav-underline justify-content-around">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Shopping</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Cook-Books</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Planning</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Settings</a>
+    </li>
+  </ul>
   <div class="container">
 
     <table class="table table-striped mt-4">
