--- a/flask_app/static/css/style.css
+++ b/flask_app/static/css/style.css
@@ -22,3 +22,19 @@
 .mr-4 {
   margin-right: 16px;
 }
+
+.nav-link{
+  font-size: 1.2rem;
+  color: rgb(31, 31, 31);
+}
+.nav-link:hover{
+  color: rgb(0, 0, 0);
+}
+
+.view{
+  max-height: calc(100vh - 72px - 46px );
+}
+
+.view-height{
+  max-height: calc(100vh - 72px - 46px - 32px);
+}
