--- a/flask_app/templates/new_recipe.html
+++ b/flask_app/templates/new_recipe.html
@@ -9,101 +9,164 @@
   <link rel="stylesheet" href="../static/css/style.css">
 </head>
 <body>
-  <nav class="navbar bg-body-tertiary">
-    <div class="container-fluid">
-      <h2 class="navbar-brand">Add a new recipe!</h2>
 
+
+
+  <nav class="navbar bg-body-tertiary bg-dark-subtle">
+    <div class="container-fluid">
+      <h2>Hi, {{user.first_name}}</h2>
+      <h1>Recipe Book</h1>
       <div>
-        <a class="btn btn-secondary" href="/recipes">
-          Back to recipes
-        </a>
-        <a class="btn btn-danger" href="/logout">
+        <a class="btn btn-outline-danger" href="/logout">
           Logout
         </a>
       </div>
     </div>
   </nav>
+  <ul class="nav nav-underline justify-content-around">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="#">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Shopping</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Cookbooks</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Planning</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Settings</a>
+    </li>
+  </ul>
 
-  <div class="container mt-4">
-    <form action="/recipes/create" method="post">
-      <div class="row">
-        <div class="col-7">
-          <div class="mb-3">
-            <label for="name" class="form-label">Name:</label>
-            <input type="text" name="name" class="form-control">
-            {% for message in get_flashed_messages(category_filter=['err_name']) %}
-            <p class="text-danger">
-              <small>
-                {{message}}
-              </small>
-            </p>
-            {% endfor %}
-          </div>
-          <div class="mb-3">
-            <label for="description" class="form-label">Description:</label>
-            <textarea class="form-control" name="description" rows="3"></textarea>
-            {% for message in get_flashed_messages(category_filter=['err_description']) %}
-            <p class="text-danger">
-              <small>
-                {{message}}
-              </small>
-            </p>
-            {% endfor %}
-          </div>
-          <div class="mb-3">
-            <label for="instructions" class="form-label">Instructions:</label>
-            <textarea class="form-control" name="instructions" rows="5"></textarea>
-            {% for message in get_flashed_messages(category_filter=['err_instructions']) %}
-            <p class="text-danger">
-              <small>
-                {{message}}
-              </small>
-            </p>
-            {% endfor %}
-          </div>
-        </div>
 
-        <div class="col-5">
-          <div class="mb-3">
-            <label for="date_made" class="form-label">Date Cooked/Made:</label>
-            <input type="date" name="date_made" class="form-control">
-            {% for message in get_flashed_messages(category_filter=['err_date_made']) %}
-            <p class="text-danger">
-              <small>
-                {{message}}
-              </small>
-            </p>
-            {% endfor %}
-          </div>
+  <div class="container-fluid">
+    <div class="row view">
 
-          <label class="form-label">
-            Under 30 minutes?
-          </label>
-          <div>
-            <input class="form-check-input" type="radio" name="under_30" value="1">
-            <label class="form-check-label mr-2">
-              Yes
-            </label>
-            <input class="form-check-input" type="radio" name="under_30" value="0">
-            <label class="form-check-label">
-              No
-            </label>
-          </div>
-          {% for message in get_flashed_messages(category_filter=['err_under_30']) %}
-          <p class="text-danger">
-            <small>
-              {{message}}
-            </small>
-          </p>
-          {% endfor %}
-        </div>
-        <div class="d-flex justify-content-end">
-          <button class="btn btn-success">Submit</button>
-        </div>
+      <div class="col-2">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mt-2">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">All</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Favorites</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Courses
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categories
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+            </ul>
+          </li>
+        </ul>
       </div>
-    </form>
 
 
+      <div class="col-10 p-4 mt-2 view-height overflow-auto">
+
+
+
+        <form action="/recipes/create" method="post">
+          <div class="row">
+            <div class="col-7">
+              <div class="mb-3">
+                <label for="name" class="form-label">Name:</label>
+                <input type="text" name="name" class="form-control">
+                {% for message in get_flashed_messages(category_filter=['err_name']) %}
+                <p class="text-danger">
+                  <small>
+                    {{message}}
+                  </small>
+                </p>
+                {% endfor %}
+              </div>
+              <div class="mb-3">
+                <label for="description" class="form-label">Description:</label>
+                <textarea class="form-control" name="description" rows="3"></textarea>
+                {% for message in get_flashed_messages(category_filter=['err_description']) %}
+                <p class="text-danger">
+                  <small>
+                    {{message}}
+                  </small>
+                </p>
+                {% endfor %}
+              </div>
+              <div class="mb-3">
+                <label for="instructions" class="form-label">Instructions:</label>
+                <textarea class="form-control" name="instructions" rows="5"></textarea>
+                {% for message in get_flashed_messages(category_filter=['err_instructions']) %}
+                <p class="text-danger">
+                  <small>
+                    {{message}}
+                  </small>
+                </p>
+                {% endfor %}
+              </div>
+            </div>
+
+            <div class="col-5">
+              <div class="mb-3">
+                <label for="date_made" class="form-label">Date Cooked/Made:</label>
+                <input type="date" name="date_made" class="form-control">
+                {% for message in get_flashed_messages(category_filter=['err_date_made']) %}
+                <p class="text-danger">
+                  <small>
+                    {{message}}
+                  </small>
+                </p>
+                {% endfor %}
+              </div>
+
+              <label class="form-label">
+                Under 30 minutes?
+              </label>
+              <div>
+                <input class="form-check-input" type="radio" name="under_30" value="1">
+                <label class="form-check-label mr-2">
+                  Yes
+                </label>
+                <input class="form-check-input" type="radio" name="under_30" value="0">
+                <label class="form-check-label">
+                  No
+                </label>
+              </div>
+              {% for message in get_flashed_messages(category_filter=['err_under_30']) %}
+              <p class="text-danger">
+                <small>
+                  {{message}}
+                </small>
+              </p>
+              {% endfor %}
+            </div>
+            <div class="d-flex justify-content-end">
+              <button class="btn btn-success">Submit</button>
+            </div>
+          </div>
+        </form>
+
+
+
+      </div>
+
+
+
+
+
+    </div>
 
   </div>
   <script src="https://kit.fontawesome.com/e71eff5305.js" crossorigin="anonymous">
