--- a/flask_app/templates/edit_recipe.html
+++ b/flask_app/templates/edit_recipe.html
@@ -25,7 +25,7 @@
   </nav>
   <ul class="nav nav-underline justify-content-around">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Shopping</a>
