--- a/flask_app/templates/new_recipe.html
+++ b/flask_app/templates/new_recipe.html
@@ -25,7 +25,7 @@
   </nav>
   <ul class="nav nav-underline justify-content-around">
     <li class="nav-item">
-      <a class="nav-link active" aria-current="page" href="#">Home</a>
+      <a class="nav-link" aria-current="page" href="/">Home</a>
     </li>
     <li class="nav-item">
       <a class="nav-link" href="#">Shopping</a>
@@ -82,9 +82,9 @@
 
         <form action="/recipes/create" method="post">
           <div class="row">
-            <div class="col-7">
+            <div class="col-6">
               <div class="mb-3">
-                <label for="name" class="form-label">Name:</label>
+                <label for="name" class="form-label">Title:</label>
                 <input type="text" name="name" class="form-control">
                 {% for message in get_flashed_messages(category_filter=['err_name']) %}
                 <p class="text-danger">
@@ -116,45 +116,98 @@
                 </p>
                 {% endfor %}
               </div>
-            </div>
-
-            <div class="col-5">
-              <div class="mb-3">
-                <label for="date_made" class="form-label">Date Cooked/Made:</label>
-                <input type="date" name="date_made" class="form-control">
-                {% for message in get_flashed_messages(category_filter=['err_date_made']) %}
-                <p class="text-danger">
-                  <small>
-                    {{message}}
-                  </small>
-                </p>
-                {% endfor %}
-              </div>
-
-              <label class="form-label">
-                Under 30 minutes?
-              </label>
-              <div>
-                <input class="form-check-input" type="radio" name="under_30" value="1">
-                <label class="form-check-label mr-2">
-                  Yes
-                </label>
-                <input class="form-check-input" type="radio" name="under_30" value="0">
-                <label class="form-check-label">
-                  No
+              <div class="form-check mb-3">
+                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                <label class="form-check-label" for="flexCheckDefault">
+                  Favorite
                 </label>
               </div>
-              {% for message in get_flashed_messages(category_filter=['err_under_30']) %}
-              <p class="text-danger">
-                <small>
-                  {{message}}
-                </small>
-              </p>
-              {% endfor %}
             </div>
-            <div class="d-flex justify-content-end">
-              <button class="btn btn-success">Submit</button>
+
+            <div class="col-6">
+              <div class="row">
+
+                <div class="col-6">
+                  <div class="mb-3">
+                    <label for="instructions" class="form-label">Category:</label>
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Open this select menu</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
+                  <div class="mb-3">
+                    <label for="instructions" class="form-label">Course:</label>
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Open this select menu</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
+                  <div class="mb-3">
+                    <label for="instructions" class="form-label">Servings:</label>
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Open this select menu</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
+
+
+
+                </div>
+
+                <div class="col-6">
+                  <div class="mb-3">
+                    <label for="instructions" class="form-label">Meal of the day:</label>
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Open this select menu</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
+                  <div class="mb-3">
+                    <label for="instructions" class="form-label">Cook time:</label>
+                    <select class="form-select" aria-label="Default select example">
+                      <option selected>Open this select menu</option>
+                      <option value="1">One</option>
+                      <option value="2">Two</option>
+                      <option value="3">Three</option>
+                    </select>
+                  </div>
+                </div>
+                <div class="col-12">
+                  <div class="mb-3">
+                    <label for="formFile" class="form-label">Upload photo:</label>
+                    <input class="form-control" type="file" id="formFile">
+                  </div>
+                  <div class="form-check mb-3">
+                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <label class="form-check-label" for="flexCheckDefault">
+                      Favorite
+                    </label>
+                  </div>
+                </div>
+              </div>
             </div>
+
+
+
+          </div>
+
+
+
+
+
+
+
+
+          <div class="d-flex justify-content-end">
+            <button class="btn btn-success">Submit</button>
           </div>
         </form>
 
