--- a/flask_app/templates/new_recipe.html
+++ b/flask_app/templates/new_recipe.html
@@ -6,7 +6,7 @@
   <title>Recipe Book</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 </head>
 <body>
 
@@ -80,13 +80,13 @@
 
 
 
-        <form action="/recipes/create" method="post">
+        <form action="/recipe/create" method="post">
           <div class="row">
             <div class="col-6">
               <div class="mb-3">
-                <label for="name" class="form-label">Title:</label>
-                <input type="text" name="name" class="form-control">
-                {% for message in get_flashed_messages(category_filter=['err_name']) %}
+                <label for="title" class="form-label">Title:</label>
+                <input type="text" name="title" class="form-control">
+                {% for message in get_flashed_messages(category_filter=['err_title']) %}
                 <p class="text-danger">
                   <small>
                     {{message}}
@@ -116,12 +116,7 @@
                 </p>
                 {% endfor %}
               </div>
-              <div class="form-check mb-3">
-                <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
-                <label class="form-check-label" for="flexCheckDefault">
-                  Favorite
-                </label>
-              </div>
+
             </div>
 
             <div class="col-6">
@@ -129,31 +124,35 @@
 
                 <div class="col-6">
                   <div class="mb-3">
-                    <label for="instructions" class="form-label">Category:</label>
-                    <select class="form-select" aria-label="Default select example">
-                      <option selected>Open this select menu</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
+                    <label for="category" class="form-label">Category:</label>
+                    <select name="category" class="form-select" aria-label="Default select example">
+                      <option selected disabled hidden>Open this select menu</option>
+                      <option value="1">Vegetarian</option>
+                      <option value="2">Vegan</option>
+                      <option value="3">Gluten-Free</option>
+                      <option value="4">BBQ/Grill</option>
+                      <option value="5">Comfort Food</option>
+                      <option value="6">Healthy Choice</option>
+                      <option value="7">Family Meals</option>
+                      <option value="8">Special Occasions</option>
                     </select>
                   </div>
                   <div class="mb-3">
-                    <label for="instructions" class="form-label">Course:</label>
-                    <select class="form-select" aria-label="Default select example">
-                      <option selected>Open this select menu</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
+                    <label for="course" class="form-label">Course:</label>
+                    <select name="course" class="form-select" aria-label="Default select example">
+                      <option selected disabled hidden>Open this select menu</option>
+                      <option value="1">Appetizer</option>
+                      <option value="2">Bread</option>
+                      <option value="3">Salad</option>
+                      <option value="4">Snack</option>
+                      <option value="5">Soup</option>
+                      <option value="6">Main</option>
+                      <option value="7">Dessert</option>
                     </select>
                   </div>
                   <div class="mb-3">
-                    <label for="instructions" class="form-label">Servings:</label>
-                    <select class="form-select" aria-label="Default select example">
-                      <option selected>Open this select menu</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
+                    <label for="servings" class="form-label">Servings:</label>
+                    <input type="number" name="servings" class="form-control">
                   </div>
 
 
@@ -162,31 +161,26 @@
 
                 <div class="col-6">
                   <div class="mb-3">
-                    <label for="instructions" class="form-label">Meal of the day:</label>
-                    <select class="form-select" aria-label="Default select example">
-                      <option selected>Open this select menu</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
+                    <label for="meal_of_day" class="form-label">Meal of the day:</label>
+                    <select name="meal_of_day" class="form-select" aria-label="Default select example">
+                      <option selected disabled hidden>Open this select menu</option>
+                      <option value="1">Breakfast</option>
+                      <option value="2">Lunch</option>
+                      <option value="3">Dinner</option>
                     </select>
                   </div>
                   <div class="mb-3">
-                    <label for="instructions" class="form-label">Cook time:</label>
-                    <select class="form-select" aria-label="Default select example">
-                      <option selected>Open this select menu</option>
-                      <option value="1">One</option>
-                      <option value="2">Two</option>
-                      <option value="3">Three</option>
-                    </select>
+                    <label for="cook_time" class="form-label">Cook time:</label>
+                    <input type="number" name="cook_time" class="form-control">
                   </div>
                 </div>
                 <div class="col-12">
                   <div class="mb-3">
                     <label for="formFile" class="form-label">Upload photo:</label>
-                    <input class="form-control" type="file" id="formFile">
+                    <input name="image" class="form-control" type="file" id="formFile">
                   </div>
                   <div class="form-check mb-3">
-                    <input class="form-check-input" type="checkbox" value="" id="flexCheckDefault">
+                    <input name="is_favorite" class="form-check-input" type="checkbox" value="1" id="flexCheckDefault">
                     <label class="form-check-label" for="flexCheckDefault">
                       Favorite
                     </label>
@@ -198,11 +192,6 @@
 
 
           </div>
-
-
-
-
-
 
 
 
