--- a/flask_app/templates/dashboard.html
+++ b/flask_app/templates/dashboard.html
@@ -7,7 +7,7 @@
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
 
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 </head>
 <body>
   <nav class="navbar bg-body-tertiary bg-dark-subtle">
@@ -75,6 +75,7 @@
 
 
       <div class="col-10 p-4 pt-0 mt-3 view-height overflow-auto">
+
         <div class="d-flex  justify-content-end">
           <a class="btn btn-primary mb-2" href="/recipe/new">
             <i class="fa-solid fa-plus"></i> Add New
@@ -82,83 +83,32 @@
         </div>
 
 
-
+        {% for recipe in recipes %}
         <div class="card recipe-card mb-3 overflow-auto">
           <div class=" row g-0">
             <div class="col-2 p-3">
               <img src="../static/img/fork_and_knife.png" class="img-fluid rounded-start img" alt="...">
             </div>
-            <div class="col-10 ">
+            <div class="col-9 ">
               <div class="card-body">
-                <h5 class="card-title">Recipe title</h5>
-                <h6 class="card-subtitle">Recipe Categoy</h6>
-                <p class="card-text">Description This is a wider card with supporting text below as a natural lead-in
-                  to
-                  additional content.
-                  This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
+                <h5 class="card-title">{{recipe.title}}</h5>
+                <h6 class="card-subtitle">{{recipe.category}}</h6>
+                <p class="card-text">{{recipe.description}}</p>
+                <p class="card-text"><small class="text-body-secondary">Last updated at: {{recipe.updated_at}}</small>
+                </p>
               </div>
+            </div>
+            <div class="col-1 d-flex flex-column justify-content-center align-items-center gap-2">
+
+
+              <a href="/recipe/show/{{recipe.id}}" class="btn btn-primary"><i class="fa-solid fa-eye"></i></a>
+              <a href="/recipe/edit/{{recipe.id}}" class="btn btn-warning"><i class="fa-solid fa-pen-to-square"></i></a>
+              <a href="/recipe/{{recipe.id}}/delete" class="btn btn-danger"><i class="fa-solid fa-trash"></i></a>
+
             </div>
           </div>
         </div>
-        <div class="card recipe-card mb-3 overflow-auto">
-          <div class=" row g-0">
-            <div class="col-2 p-3">
-              <img src="../static/img/fork_and_knife.png" class="img-fluid rounded-start img" alt="...">
-            </div>
-            <div class="col-10 ">
-              <div class="card-body">
-                <h5 class="card-title">Recipe title</h5>
-                <h6 class="card-subtitle">Recipe Categoy</h6>
-                <p class="card-text">Description This is a wider card with supporting text below as a natural lead-in
-                  to
-                  additional content.
-                  This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card recipe-card mb-3 overflow-auto">
-          <div class=" row g-0">
-            <div class="col-2 p-3">
-              <img src="../static/img/fork_and_knife.png" class="img-fluid rounded-start img" alt="...">
-            </div>
-            <div class="col-10 ">
-              <div class="card-body">
-                <h5 class="card-title">Recipe title</h5>
-                <h6 class="card-subtitle">Recipe Categoy</h6>
-                <p class="card-text">Description This is a wider card with supporting text below as a natural lead-in
-                  to
-                  additional content.
-                  This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-        <div class="card recipe-card mb-3 overflow-auto">
-          <div class=" row g-0">
-            <div class="col-2 p-3">
-              <img src="../static/img/fork_and_knife.png" class="img-fluid rounded-start img" alt="...">
-            </div>
-            <div class="col-10 ">
-              <div class="card-body">
-                <h5 class="card-title">Recipe title</h5>
-                <h6 class="card-subtitle">Recipe Categoy</h6>
-                <p class="card-text">Description This is a wider card with supporting text below as a natural lead-in
-                  to
-                  additional content.
-                  This content is a little bit longer.</p>
-                <p class="card-text"><small class="text-body-secondary">Last updated 3 mins ago</small></p>
-              </div>
-            </div>
-          </div>
-        </div>
-
-
-
-
+        {% endfor %}
 
 
       </div>
