--- a/flask_app/templates/display_recipe.html
+++ b/flask_app/templates/display_recipe.html
@@ -6,76 +6,166 @@
   <title>Recipe Book</title>
   <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/css/bootstrap.min.css" rel="stylesheet"
     integrity="sha384-9ndCyUaIbzAi2FUVXJi0CjmCapSmO7SnpJef0486qhLnuZ2cdeRhO02iuK6FUUVM" crossorigin="anonymous">
-  <link rel="stylesheet" href="../static/css/style.css">
+  <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css')}}">
 </head>
 <body>
-  <nav class="navbar bg-body-tertiary">
+  <nav class="navbar bg-body-tertiary bg-dark-subtle">
     <div class="container-fluid">
-      <h2 class="navbar-brand">Welcome {{user.first_name}}</h2>
-
+      <h2>Hi, {{user.first_name}}</h2>
+      <h1>Recipe Book</h1>
       <div>
-        <a class="btn btn-primary" href="/recipes">
-          Back
-        </a>
-        <a class="btn btn-danger" href="/logout">
+        <a class="btn btn-outline-danger" href="/logout">
           Logout
         </a>
       </div>
     </div>
   </nav>
+  <ul class="nav nav-underline justify-content-around">
+    <li class="nav-item">
+      <a class="nav-link active" aria-current="page" href="/">Home</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link" href="#">Shopping</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Cookbooks</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled" href="#">Planning</a>
+    </li>
+    <li class="nav-item">
+      <a class="nav-link disabled">Settings</a>
+    </li>
+  </ul>
 
-  <div class="container mt-4">
-    <div class="d-flex justify-content-between align-items-center">
-      <h2>{{recipe.name}}</h2>
-      <h4>Posted By: {{recipe.user.first_name}} {{recipe.user.last_name}}</h4>
+
+  <div class="container-fluid">
+    <div class="row view">
+
+      <div class="col-2">
+        <ul class="navbar-nav justify-content-end flex-grow-1 pe-3 mt-2">
+          <li class="nav-item">
+            <a class="nav-link active" aria-current="page" href="#">All</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link" aria-current="page" href="#">Favorites</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Courses
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+
+            </ul>
+          </li>
+          <li class="nav-item dropdown">
+            <a class="nav-link dropdown-toggle" href="#" role="button" data-bs-toggle="dropdown" aria-expanded="false">
+              Categories
+            </a>
+            <ul class="dropdown-menu">
+              <li><a class="dropdown-item" href="#">Action</a></li>
+              <li><a class="dropdown-item" href="#">Another action</a></li>
+            </ul>
+          </li>
+        </ul>
+      </div>
+
+
+      <div class="col-10 p-4 pt-0 mt-3 view-height overflow-auto">
+
+        <div class="card p-3">
+          <div class="d-flex justify-content-between align-items-baseline mb-4">
+            <h2>{{recipe.title}}</h2>
+            <h4>Posted By: {{recipe.user.first_name}} {{recipe.user.last_name}}</h4>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Description:</p>
+            </div>
+            <div class="col-10">
+              <p>{{recipe.description}}</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Instructions:</p>
+            </div>
+            <div class="col-10">
+              <p>{{recipe.instructions}}</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Category:</p>
+            </div>
+            <div class="col-10">
+              <p>{{recipe.category}}</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Course:</p>
+            </div>
+            <div class="col-10">
+              <p>{{recipe.course}}</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Servings:</p>
+            </div>
+            <div class="col-10">
+              <p>{{recipe.servings}}</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Meal of the day:</p>
+            </div>
+            <div class="col-10">
+              <p>{{recipe.meal_of_day}}</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Cook time:</p>
+            </div>
+            <div class="col-10">
+              <p>{{recipe.cook_time}}</p>
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Favorite:</p>
+            </div>
+            <div class="col-10">
+              {% if recipe.is_favorite == 1 %}
+              <p>Yes</p>
+              {% else %}
+              <p>No</p>
+              {% endif %}
+            </div>
+          </div>
+          <div class="row">
+            <div class="col-2">
+              <p>Image:</p>
+            </div>
+            <div class="col-10">
+              <p>{{recipe.image}}</p>
+            </div>
+          </div>
+        </div>
+      </div>
+
+
+
     </div>
-
-    <div class="card p-3">
-      <div class="row">
-        <div class="col-5">
-          <p>Description:</p>
-        </div>
-        <div class="col-7">
-          <p>{{recipe.description}}</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-5">
-          <p>Under 30 minutes:</p>
-        </div>
-        <div class="col-7">
-          {%if recipe.under_30 == 1%}
-          <p>Yes</p>
-          {%else%}
-          <p>No</p>
-          {%endif%}
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-5">
-          <p>Instructions:</p>
-        </div>
-        <div class="col-7">
-          <p>{{recipe.instructions}}</p>
-        </div>
-      </div>
-      <div class="row">
-        <div class="col-5">
-          <p>Date Made:</p>
-        </div>
-        <div class="col-7">
-          <p>{{recipe.date_made}}</p>
-        </div>
-      </div>
-    </div>
-
-
-
-  </div>
-  <script src="https://kit.fontawesome.com/e71eff5305.js" crossorigin="anonymous">
-  </script>
-  <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
-    integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
-    crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/e71eff5305.js" crossorigin="anonymous">
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0/dist/js/bootstrap.bundle.min.js"
+      integrity="sha384-geWF76RCwLtnZ8qwWowPQNguL3RmwHVBC9FhGdlKrxdiJJigb/j/68SIy3Te4Bkz"
+      crossorigin="anonymous"></script>
 </body>
 </html>
